solves sizing on mobile i think

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -68,8 +68,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  height: 100%;
+  width: 100dvw;
+  height: 100dvh;
   flex-grow: 1;
 }
 
@@ -87,7 +87,9 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
+  min-height: 100svh;
+  width: 100dvw;
+  height: 100dvh;
 
   // background-image: url('/src/assets/plus_sign.svg');
   // background-size: 64px;
