--- a/src/views/home/home.scss
+++ b/src/views/home/home.scss
@@ -6,7 +6,7 @@
   width: 100%;
   height: 100%;
   max-width: 100dvw;
-  max-height: 100dvh;
+  max-height: 100svh;
   overflow: hidden;
 }
 
@@ -16,7 +16,7 @@
   width: 100%;
   height: 100%;
   max-width: 100dvw;
-  max-height: 100dvh;
+  max-height: 100svh;
   overflow: hidden;
   position: relative;
 
